# workenv

./: .gitignore  README.md  crontab.sh  do_backup.sh  do_setup.sh  index.bak.html  start_httpserver.sh  stop_httpserver.sh
algorithms/: find_sum.cpp
cpp/: hello.c  (+38 more)
syslinux/src/makefile/makefile4_auto/auto_make/: Makefile  Makefile.am  Makefile.common  Makefile.in  config.h  config.status  configure  configure.ac  libtool
syslinux/src/makefile/makefile4_auto/auto_make/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
syslinux/src/makefile/makefile4_auto/auto_make/h/common/: common.h
syslinux/src/makefile/makefile4_auto/auto_make/h/sub1/: sub1.h
syslinux/src/makefile/makefile4_auto/auto_make/h/sub2/: sub2.h
syslinux/src/makefile/makefile4_auto/auto_make/h/sub3/: sub3.h
syslinux/src/makefile/makefile4_auto/auto_make/src/apps/: Makefile  Makefile.am  Makefile.in  main.c  main_sub1.c  main_sub2.c  main_sub3.c
syslinux/src/makefile/makefile4_auto/auto_make/src/apps/.deps/: main.Po  main_sub1.Po  main_sub2.Po  main_sub3.Po
syslinux/src/makefile/makefile4_auto/auto_make/src/sub1/: Makefile  Makefile.am  Makefile.in  sub1.c
syslinux/src/makefile/makefile4_auto/auto_make/src/sub1/.deps/: sub1.Plo
syslinux/src/makefile/makefile4_auto/auto_make/src/sub2/: Makefile  Makefile.am  Makefile.in  sub2.c
syslinux/src/makefile/makefile4_auto/auto_make/src/sub2/.deps/: sub2.Plo
syslinux/src/makefile/makefile4_auto/auto_make/src/sub3/: Makefile  Makefile.am  Makefile.in  sub3.c
syslinux/src/makefile/makefile4_auto/auto_make/src/sub3/.deps/: sub3.Plo
(+266 files in other folders)
