include $(top_srcdir)/Makefile.common

noinst_PROGRAMS = main main_sub1 main_sub2 main_sub3

main_SOURCES = main.c

main_sub1_SOURCES = main_sub1.c

main_sub2_SOURCES = main_sub2.c

main_sub3_SOURCES = main_sub3.c


#libray 
main_LDADD =	$(SUB1_LA)	\
				$(SUB2_LA)	\
				$(SUB3_LA)

main_sub1_LDADD =	$(SUB1_LA)	\
				$(SUB2_LA)	\
				$(SUB3_LA)
				
main_sub2_LDADD =	$(SUB1_LA)	\
				$(SUB2_LA)	\
				$(SUB3_LA)
				
main_sub3_LDADD =	$(SUB1_LA)	\
				$(SUB2_LA)	\
				$(SUB3_LA)

				
				
				

				